objects/CPRFieldMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CPR_FieldName__c</fullName>
        <label>CPR FieldName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObjectField__c</fullName>
        <label>sObjectField</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObjectName__c</fullName>
        <label>sObjectName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>CPR Fields Mapping</label>
</CustomObject>